// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`client/messaging/common-message-layout/TextMessage > message as a normal text 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-kZfRWb DBuif"
    role="document"
  >
    <div
      class="sc-hhXYTC eNjlRP sc-eHoOIp ddbqEw"
      tabindex="0"
    >
      <span
        class="sc-hAkAFK jMzUWj"
      >
        <i
          aria-hidden="true"
          class="sc-bitxrY ehIxvc"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-bitxrY ehIxvc"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-ilnrqe hxYGAV sc-fmtEmb iuUgkj"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-uMZhz jcksOz"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-bitxrY ehIxvc"
    >
      : 
    </i>
    <span
      class="sc-ljIcGq cxXYJc"
    >
      This is test message
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-kZfRWb DBuif"
    role="document"
  >
    <div
      class="sc-hhXYTC eNjlRP sc-eHoOIp ddbqEw"
      tabindex="0"
    >
      <span
        class="sc-hAkAFK jMzUWj"
      >
        <i
          aria-hidden="true"
          class="sc-bitxrY ehIxvc"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-bitxrY ehIxvc"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-ilnrqe hxYGAV sc-fmtEmb iuUgkj"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-uMZhz jcksOz"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-bitxrY ehIxvc"
    >
      : 
    </i>
    <span
      class="sc-ljIcGq cxXYJc"
    >
      here is a link 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link before a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-kZfRWb DBuif"
    role="document"
  >
    <div
      class="sc-hhXYTC eNjlRP sc-eHoOIp ddbqEw"
      tabindex="0"
    >
      <span
        class="sc-hAkAFK jMzUWj"
      >
        <i
          aria-hidden="true"
          class="sc-bitxrY ehIxvc"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-bitxrY ehIxvc"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-ilnrqe hxYGAV sc-fmtEmb iuUgkj"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-uMZhz jcksOz"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-bitxrY ehIxvc"
    >
      : 
    </i>
    <span
      class="sc-ljIcGq cxXYJc"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-ilnrqe hxYGAV sc-jlJOIR fZspuk"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-uMZhz jcksOz"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link between mentions 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-kZfRWb DBuif"
    role="document"
  >
    <div
      class="sc-hhXYTC eNjlRP sc-eHoOIp ddbqEw"
      tabindex="0"
    >
      <span
        class="sc-hAkAFK jMzUWj"
      >
        <i
          aria-hidden="true"
          class="sc-bitxrY ehIxvc"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-bitxrY ehIxvc"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-ilnrqe hxYGAV sc-fmtEmb iuUgkj"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-uMZhz jcksOz"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-bitxrY ehIxvc"
    >
      : 
    </i>
    <span
      class="sc-ljIcGq cxXYJc"
    >
      hey
       
      <span
        class="sc-ilnrqe hxYGAV sc-jlJOIR fZspuk"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-uMZhz jcksOz"
        >
                     
        </span>
      </span>
       see 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-ilnrqe hxYGAV sc-jlJOIR fZspuk"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-uMZhz jcksOz"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-kZfRWb DBuif"
    role="document"
  >
    <div
      class="sc-hhXYTC eNjlRP sc-eHoOIp ddbqEw"
      tabindex="0"
    >
      <span
        class="sc-hAkAFK jMzUWj"
      >
        <i
          aria-hidden="true"
          class="sc-bitxrY ehIxvc"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-bitxrY ehIxvc"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-ilnrqe hxYGAV sc-fmtEmb iuUgkj"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-uMZhz jcksOz"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-bitxrY ehIxvc"
    >
      : 
    </i>
    <span
      class="sc-ljIcGq cxXYJc"
    >
      hey
       
      <span
        class="sc-ilnrqe hxYGAV sc-jlJOIR fZspuk"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-uMZhz jcksOz"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention before a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-kZfRWb DBuif"
    role="document"
  >
    <div
      class="sc-hhXYTC eNjlRP sc-eHoOIp ddbqEw"
      tabindex="0"
    >
      <span
        class="sc-hAkAFK jMzUWj"
      >
        <i
          aria-hidden="true"
          class="sc-bitxrY ehIxvc"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-bitxrY ehIxvc"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-ilnrqe hxYGAV sc-fmtEmb iuUgkj"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-uMZhz jcksOz"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-bitxrY ehIxvc"
    >
      : 
    </i>
    <span
      class="sc-ljIcGq cxXYJc"
    >
      <span
        class="sc-ilnrqe hxYGAV sc-jlJOIR fZspuk"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-uMZhz jcksOz"
        >
                     
        </span>
      </span>
       go to 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention between links 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-kZfRWb DBuif"
    role="document"
  >
    <div
      class="sc-hhXYTC eNjlRP sc-eHoOIp ddbqEw"
      tabindex="0"
    >
      <span
        class="sc-hAkAFK jMzUWj"
      >
        <i
          aria-hidden="true"
          class="sc-bitxrY ehIxvc"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-bitxrY ehIxvc"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-ilnrqe hxYGAV sc-fmtEmb iuUgkj"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-uMZhz jcksOz"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-bitxrY ehIxvc"
    >
      : 
    </i>
    <span
      class="sc-ljIcGq cxXYJc"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-ilnrqe hxYGAV sc-jlJOIR fZspuk"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-uMZhz jcksOz"
        >
                     
        </span>
      </span>
       or here 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention of self user 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-kZfRWb idsOXI"
    role="document"
  >
    <div
      class="sc-hhXYTC eNjlRP sc-eHoOIp ddbqEw"
      tabindex="0"
    >
      <span
        class="sc-hAkAFK jMzUWj"
      >
        <i
          aria-hidden="true"
          class="sc-bitxrY ehIxvc"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-bitxrY ehIxvc"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-ilnrqe hxYGAV sc-fmtEmb iuUgkj"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-uMZhz jcksOz"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-bitxrY ehIxvc"
    >
      : 
    </i>
    <span
      class="sc-ljIcGq cxXYJc"
    >
      Hey
       
      <span
        class="sc-ilnrqe hxYGAV sc-jlJOIR fZspuk"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-uMZhz jcksOz"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;
